1.0a2:
- Unit tests for tracker type, app name, app ID, app version, app installer ID.

1.0a1:
- Unit tests for creating a tracker and updating its custom dimensions, custom metrics or user ID.

0.2dev1:
- Preserve custom dimensions, custom metrics, page, hostname and screen name across hits.
- Add docstrings.

0.1dev1:
- Track pageview, event, transaction, item, screenview, exception, timing.